[WIP] Update Panama types to JDK 21